--- a/package.json
+++ b/package.json
@@ -64,8 +64,9 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
-    "node-notifier": "^10.0.1",
-    "request": "^2.88.2"
+    "axios": "^1.6.3",
+    "dotenv": "^16.3.1",
+    "node-notifier": "^10.0.1"
   },
   "devDependencies": {
     "electron": "29.0.0-alpha.1",
