--- a/package.json
+++ b/package.json
@@ -64,8 +64,12 @@
   },
   "dependencies": {
     "adm-zip": "^0.5.10",
+    "amqplib": "^0.10.3",
     "axios": "^1.6.3",
+    "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "kafka-node": "^5.0.0",
     "node-notifier": "^10.0.1"
   },
   "devDependencies": {
