--- a/package.json
+++ b/package.json
@@ -63,14 +63,17 @@
     }
   },
   "dependencies": {
+    "@stomp/stompjs": "^7.0.0",
     "adm-zip": "^0.5.10",
     "amqplib": "^0.10.3",
     "axios": "^1.6.3",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "kafka-node": "^5.0.0",
-    "node-notifier": "^10.0.1"
+    "node-notifier": "^10.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "electron": "29.0.0-alpha.1",
